# ComfyUI_UltimateSDUpscale

./: .gitignore  README.md  __init__.py  crop_model_patch.py  nodes.py  pyproject.toml  usdu_nodes.py  usdu_patch.py  usdu_utils.py  utils.py
.github/workflows/: publish.yml  update-submodules.yml
example_workflows/: basic-usdu.json
js/docs/: UltimateSDUpscale.md  UltimateSDUpscaleCustomSample.md  UltimateSDUpscaleNoUpscale.md
modules/: images.py  processing.py  shared.py  upscaler.py
repositories/: __init__.py
test/: .coveragerc  .gitignore  README.md  configs.py  conftest.py  fixtures_images.py  helpers.py  hf_downloader.py  io_utils.py  pytest.ini  run_tests.sh  setup_utils.py  tensor_utils.py  test_base_images.py  test_controlnet.py  test_main_workflow.py  test_settings.py  test_tiling_modes.py
