[project]
name = "comfyui_ultimatesdupscale"
description = "ComfyUI nodes for the Ultimate Stable Diffusion Upscale script by Coyote-A."
version = "1.7.1"
license = { file = "LICENSE" }

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[project.urls]
Repository = "https://github.com/ssitu/ComfyUI_UltimateSDUpscale"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ssit"
DisplayName = "ComfyUI_UltimateSDUpscale"
Icon = ""
includes = ["/repositories/ultimate_sd_upscale/"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ComfyUI_UltimateSDUpscale"]
